Bug 85081 - Crash in opening Tools > Options > database: terminate on unable to load kde addressbook
Summary: Crash in opening Tools > Options > database: terminate on unable to load kde ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: x86 (IA32) All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.4.0
Keywords: haveBacktrace
: 85363 85650 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-10-16 07:19 UTC by Cor Nouws
Modified: 2014-11-04 19:16 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
tar file (10.00 KB, application/x-tar)
2014-10-20 20:10 UTC, Cor Nouws
Details
better trace (20.00 KB, application/x-tar)
2014-10-21 07:57 UTC, Cor Nouws
Details
Fedora 20 32-bit gdb bt of Tools --> Options --> Advanced segfault (4.12 KB, text/plain)
2014-10-26 15:23 UTC, V Stuart Foote
Details
gdb bt of 32-bit TB45 current master crash tools options base database crash (11.35 KB, text/plain)
2014-10-26 16:27 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2014-10-16 07:19:18 UTC
starting to connect to database via Tools > Options > Base ..
unfolding that tree in Connections and Databases
move cursor to Databases
  > Crash

terminate called after throwing an instance of 'com::sun::star::loader::CannotActivateFactoryException'

Version: 4.4.0.0.alpha0+
Build ID: ce5cc7afb0f1c99237d04e0c754527c725d8491c
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-06_19:35:48
Comment 1 Cor Nouws 2014-10-16 07:20:29 UTC
Various bugs like this seem to be fixed before, e.g. bug 62478
Comment 2 Julien Nabet 2014-10-16 17:15:43 UTC
Just for the record, on pc Debian x86-64 with master sources updated today, I don't reproduce this.
Comment 3 Robert Großkopf 2014-10-16 18:54:54 UTC
Have tested it with this package:
Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-10-11_23:16:09

Couldn't reproduce the buggy behavior.
Comment 4 Cor Nouws 2014-10-20 07:42:20 UTC
still the same problem with Version: 4.4.0.0.alpha0+
Build ID: c68642d535f2ebb7f1cd866ad19b1fd018e7cd6d
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-18_23:03:32
Comment 5 Cor Nouws 2014-10-20 07:43:11 UTC
looking at the non-cofirmations: maybe it's 32 bits only?
Comment 6 Julien Nabet 2014-10-20 18:44:55 UTC
Cor: perhaps you could retrieve a backtrace by following this link?
https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#GNU.2FLinux:_How_to_get_a_backtrace
Comment 7 Cor Nouws 2014-10-20 20:10:25 UTC
Created attachment 108134 [details]
tar file

as requested - regards, Cor
Comment 8 Julien Nabet 2014-10-20 20:14:01 UTC
Badfully; there's no stack here :-(
I quote:
"
/home/cono/LibreOffice/440alpha0/libreofficedev4.4/program/gdbtrace:9: Error in sourced command file:
No stack.
"
Comment 9 Cor Nouws 2014-10-20 20:18:20 UTC
(In reply to Julien Nabet from comment #8)

> "
> /home/cono/LibreOffice/440alpha0/libreofficedev4.4/program/gdbtrace:9: Error
> in sourced command file:
> No stack.
> "

Yep - I saw that and already feared ...
Comment 10 Julien Nabet 2014-10-21 05:46:13 UTC
You can also try the old way to retrieve a backtrace.

Open 2 console or terminal.

On console 1: open LibreOffice

On console 2, type this:
LOPID=$(pidof soffice.bin)
gdb soffice.bin $LOPID
c

On console 1: reproduce the crash

On console 2, type this:
bt

If you only see "??"
type "c" (without quotes) until the next crash

Copy paste the bt.

You can exit gdb on console 2 by typing "q"
Comment 11 Cor Nouws 2014-10-21 07:54:58 UTC
(In reply to Julien Nabet from comment #10)
> You can also try the old way to retrieve a backtrace.
> 
> Open 2 console or terminal.
> 
> On console 1: open LibreOffice

I had to think of starting with ./soffice.bin, rather then with ./soffice

> On console 2, type this:
> LOPID=$(pidof soffice.bin)
> gdb soffice.bin $LOPID

and use sudo here..

> c
> 
> On console 1: reproduce the crash
> 
> On console 2, type this:
> bt
> 
> If you only see "??"
> type "c" (without quotes) until the next crash
> 
> Copy paste the bt.
> 
> You can exit gdb on console 2 by typing "q"

Thanks - will attach.
Comment 12 Cor Nouws 2014-10-21 07:57:14 UTC
Created attachment 108157 [details]
better trace
Comment 13 Julien Nabet 2014-10-21 09:29:49 UTC
Thank you Cor for the bt, sorry for my mistake.

Here is the relevant part of it:
#8  0xabecc086 in drivermanager::OSDBCDriverManager::createEnumeration() ()
   from /home/cono/LibreOffice/440alpha0/libreofficedev4.4/program/../program/libsdbc2.so
#9  0xabb1414f in offapp::ODriverEnumerationImpl::ODriverEnumerationImpl() ()
   from /home/cono/LibreOffice/440alpha0/libreofficedev4.4/program/libcuilo.so
#10 0xabb1431b in offapp::ODriverEnumeration::ODriverEnumeration() ()
   from /home/cono/LibreOffice/440alpha0/libreofficedev4.4/program/libcuilo.so
#11 0xabacd4c8 in offapp::ConnectionPoolConfig::GetOptions(SfxItemSet&) ()
   from /home/cono/LibreOffice/440alpha0/libreofficedev4.4/program/libcuilo.so
#12 0xabb19ede in OfaTreeOptionsDialog::CreateItemSet(unsigned short) ()
   from /home/cono/LibreOffice/440alpha0/libreofficedev4.4/program/libcuilo.so
#13 0xabb1a458 in OfaTreeOptionsDialog::SelectHdl_Impl() ()
   from /home/cono/LibreOffice/440alpha0/libreofficedev4.4/program/libcuilo.so
Comment 14 Julien Nabet 2014-10-21 18:08:15 UTC
Cor: what's your Linux distrib+version?
What's your precise Java version? (1.6, 1.7, 1.8?) 32 or 64 bits? OpenJdk, OracleSun.
Could you give the output of this command?
java -version 

Finally, for the test, could you rename your LO directory profile (see https://wiki.documentfoundation.org/UserProfile#GNU.2FLinux) and give it a new try?
Comment 15 Cor Nouws 2014-10-21 18:41:09 UTC
Hi Julien,

(In reply to Julien Nabet from comment #14)
> Cor: what's your Linux distrib+version?

Ubuntu 14.04 32 bits

> What's your precise Java version? (1.6, 1.7, 1.8?) 32 or 64 bits? OpenJdk,
> OracleSun.
> Could you give the output of this command?
> java -version 

java version "1.7.0_65"
OpenJDK Runtime Environment (IcedTea 2.5.2) (7u65-2.5.2-3~14.04)
OpenJDK Server VM (build 24.65-b04, mixed mode)

> Finally, for the test, could you rename your LO directory profile (see
> https://wiki.documentfoundation.org/UserProfile#GNU.2FLinux) and give it a
> new try?

Tried it with a fresh profile again - same result.


Cheers - Cor
Comment 16 Julien Nabet 2014-10-21 23:03:10 UTC
Thank you Cor for your feedback, I put it back to NEW since I don't have other questions.
Comment 17 Cor Nouws 2014-10-23 12:10:56 UTC
*** Bug 85363 has been marked as a duplicate of this bug. ***
Comment 18 Cor Nouws 2014-10-23 12:15:53 UTC
As it turns out the last days, it crashes for me on more places:
e.g.
  Tools > Options > LibreOffice > Advanced
  Tools > Options > Language settings > Writing aids
and also as reported by Jay, who's on 32 bits too
Comment 19 Jean-Baptiste Faure 2014-10-23 18:08:54 UTC
No crash for me with 
Version: 4.4.0.0.alpha1+
Build ID: 72f368f6bfedb680ffcbd1c7fe28e8fc6d19ad2b
built at home under Ubuntu 14.04 x86-64

I had similar problem a days ago but it is fixed now: bug 85213.

Best regards. JBF
Comment 20 Cor Nouws 2014-10-23 18:18:42 UTC
(In reply to Jean-Baptiste Faure from comment #19)
> No crash for me with 
> Version: 4.4.0.0.alpha1+

Waiting for 32 bits alpha1 :)
Comment 21 baffclan 2014-10-26 10:32:42 UTC
Reproduce with Win-X86 on WinVista-JA.

LibreOfficeDev_4.4.0.0.alpha1_Win_x86_en-US_de_ar_ja_qtz.msi
Version: 4.4.0.0.alpha1
Build ID: e73cb2cc40530caa75d588833c4b690e4f49f630
Comment 22 Jean-Baptiste Faure 2014-10-26 10:50:00 UTC
Seems to be a 32 bits only problem.

Best regards. JBF
Comment 23 Julien Nabet 2014-10-26 11:20:41 UTC
On pc Debian x86-64 with Virtualbox and Linux Mint 17 32 bits Cinnamon, I don't reproduce this with master sources updated today :-(
(I built with enable-dbgutil)
Comment 24 V Stuart Foote 2014-10-26 12:52:37 UTC
On Windows 7 sp1, 64-bit en-US with Oracle Java JRE 1.8u25 installed

The Windows 32-bit builds seems not to have been affected.

either with the fraction --> boost::rational refactoring
Version: 4.4.0.0.alpha0+
Build ID: 3e2bd1e4022e25b77bcc8eba5e02c1adc57008a1
TinderBox: Win-x86@39, Branch:master, Time: 2014-10-16_00:50:04

or after it was reverted
Version: 4.4.0.0.alpha1+
Build ID: 04ea7b24ec1b5a027efa0b850f2bc3ac7116c52e
TinderBox: Win-x86@39, Branch:master, Time: 2014-10-25_08:36:56
Comment 25 Thomas Hackert 2014-10-26 13:07:34 UTC
Hello Cor, *,
I can confirm that this bug still exist in

LO Version: 4.4.0.0.alpha1+ Build ID: 3f5251675eeeeae56ea282fdeb09dbc53ce4aae6
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-26_01:09:19 (parallel installed, following the instructions from https://wiki.documentfoundation.org/Installing_in_parallel)

OS: Debian Testing i686

... :(

Just out of interest: "baffclan" confirmed it in comment 21 with Win. Should "Linux (All)" not be changed to "All"?
HTH
Thomas.
Comment 26 Julien Nabet 2014-10-26 13:12:27 UTC
thackert: I agree with you. Let's update to All.
Comment 27 V Stuart Foote 2014-10-26 15:23:54 UTC
Created attachment 108456 [details]
Fedora 20 32-bit gdb bt of Tools --> Options --> Advanced segfault

None of this manifests on the TB39 32-bit debug builds,

Working with TDF alpha1 release builds... can not confirm on the Windows build.

On Windows 7 sp1, 64-bit en-US with JRE 1.8u25
with
Version: 4.4.0.0.alpha1
Build ID: e73cb2cc40530caa75d588833c4b690e4f49f630

On Fedora 20, 32-bit with LXDE DE
java version "1.7.0_71"
OpenJDK Runtime Environment (fedora-2.5.3.0.fc20-i386 u71-b14)
OpenJDK Server VM (build 24.65-b04, mixed mode)
with
Version: 4.4.0.0.alpha1
Build ID: e73cb2cc40530caa75d588833c4b690e4f49f630

=-=

The 32-bit Windows build allows me to open the Tools -> Options -> LibreOffice Base panel and enter Databases filed no issue. The 32-bit Linux build does not, and crashes--same bt as Cor.

(gdb) c
Continuing.
[New Thread 0xb0b61b40 (LWP 30802)]
[Thread 0xb0b61b40 (LWP 30802) exited]
[New Thread 0xb0b61b40 (LWP 30803)]
[New Thread 0xb01ffb40 (LWP 30804)]

Program received signal SIGABRT, Aborted.
0xb77ded1c in __kernel_vsyscall ()
(gdb) bt
#0  0xb77ded1c in __kernel_vsyscall ()
#1  0x426d68e7 in raise () from /lib/libc.so.6
#2  0x426d8123 in abort () from /lib/libc.so.6
#3  0x431da8f5 in __gnu_cxx::__verbose_terminate_handler() () from /lib/libstdc++.so.6
#4  0x431d8314 in ?? () from /lib/libstdc++.so.6
#5  0x431d8350 in std::terminate() () from /lib/libstdc++.so.6
#6  0x431d8364 in ?? () from /lib/libstdc++.so.6
#7  0x431d7e7a in __cxa_call_unexpected () from /lib/libstdc++.so.6
#8  0xaf70e086 in drivermanager::OSDBCDriverManager::createEnumeration() ()
   from /home/vsfoote/Downloads/LODevAlpha1_20141021/RPMS/install/opt/libreofficedev4.4/program/../program/libsdbc2.so
#9  0xaf448117 in offapp::ODriverEnumerationImpl::ODriverEnumerationImpl() ()
   from /home/vsfoote/Downloads/LODevAlpha1_20141021/RPMS/install/opt/libreofficedev4.4/program/libcuilo.so
#10 0xaf4482e3 in offapp::ODriverEnumeration::ODriverEnumeration() ()
   from /home/vsfoote/Downloads/LODevAlpha1_20141021/RPMS/install/opt/libreofficedev4.4/program/libcuilo.so
#11 0xaf401490 in offapp::ConnectionPoolConfig::GetOptions(SfxItemSet&) ()
   from /home/vsfoote/Downloads/LODevAlpha1_20141021/RPMS/install/opt/libreofficedev4.4/program/libcuilo.so

But what is more telling--entering Tools -> Options -> Advanced will cause a document recover cycle on Windows, and a crash on 32-bit Linux, see gdb suspect they are related.
Comment 28 V Stuart Foote 2014-10-26 16:27:33 UTC
Created attachment 108460 [details]
gdb bt of 32-bit TB45 current master crash tools options base database crash

On Fedora 20, 32-bit with LXDE DE
java version "1.7.0_71"
OpenJDK Runtime Environment (fedora-2.5.3.0.fc20-i386 u71-b14)
OpenJDK Server VM (build 24.65-b04, mixed mode)
with

Version: 4.4.0.0.alpha1+
Build ID: 3f5251675eeeeae56ea282fdeb09dbc53ce4aae6
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-26_01:09:19

With this TB45 build of maste, still getting the same crash and bt when navigating to Tools --> Options --> LibreOffice Base --> Database panel.

The Tools --> Options --> Advanced issue seems to have been resolved.
Comment 29 V Stuart Foote 2014-10-26 17:47:05 UTC
@Cor, Julien, *

Kind of feels like there were two issues going on here:

1). the original issue of the SIGABRT crash with Tools -> Options -> LibreOffice Base -> Database panel

2). those of comment 18 and of bug 85363, and my note on Tools -> Options -> Advanced all segfault crashes

Issue 1 continues with current builds of 4.4.0.0alpha1+ masters

Issue 2 seems to be resolved. I suspect it to coincide with, if not be result of, reversion of the boost::rational refactoring of Fraction and bug 84854

I can not reproduce issue 1 with any build of Windows, TDF alpha1 or TB dailies.
Comment 30 Robinson Tryon (qubit) 2014-10-27 00:37:17 UTC
Trying to reproduce bug 85458, LibreOffice crashes when I try to edit the 'Templates' path:

Repro Steps:
[1] Start LibreOffice and open Options dialogue.
[2] Go to “LibreOffice > Paths”, select the Templates line, and click the Edit button

Result: LibreOffice crashes

TESTED on:
* 4.4.0.0.alpha1 + Ubuntu 14.04 AND
* 4.4.0.0.alpha1 + OS X 10.9.4
Comment 31 V Stuart Foote 2014-10-27 02:46:37 UTC
(In reply to Robinson Tryon (qubit) from comment #30)
> Trying to reproduce bug 85458, LibreOffice crashes when I try to edit the
> 'Templates' path:

@Robinson, hey there rookie ;-) how about including the commit ID for the build you're having issue with...  

Is this with the TDF build from the 21st (e73cb2cc40530caa75d588833c4b690e4f49f630)? Or is it also against current TB or a git pull build?

I can not reproduce crash, when editing Tools -> Options -> Paths for me on Windows 7 sp1 with a current TB39 32-bit build.
Comment 32 Caolán McNamara 2014-10-28 13:07:36 UTC
For me on x86_64 with a 32bit built I get the original crash reported because an attempt to load libkab1lo.so fails. That's the KDE addressbook support. On my machine I don't have the 32bit KDE and QT libs it needs, so failure to load makes sense there.
Comment 33 Caolán McNamara 2014-10-28 15:14:40 UTC
http://cgit.freedesktop.org/libreoffice/core/commit/?id=7acb634f58e86375f4a3cd4926a560679a45896f for the crash I see on failure to load the kde addressbook.

I don't see the other crashes, so if they still persist then they aren't the same problem as the problem I've fixed under this id and a new bug is required for them
Comment 34 Commit Notification 2014-10-28 15:42:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7acb634f58e86375f4a3cd4926a560679a45896f

Resolves: fdo#85081 terminate if can't load kde addressbook

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 35 Cor Nouws 2014-10-28 19:53:22 UTC
(In reply to Caolán McNamara from comment #33)
 
> I don't see the other crashes, so if they still persist then they aren't the
> same problem as the problem I've fixed under this id and a new bug is
> required for them

Yep - I'll test the other ones later.
Thanks for this fix!
Comment 36 Cor Nouws 2014-10-30 14:36:49 UTC
*** Bug 85650 has been marked as a duplicate of this bug. ***
Comment 37 Cor Nouws 2014-11-04 19:16:26 UTC
Indeed fine in 4.4.0alpha1 :)