Resolves: fdo#85081 terminate if can't load kde addressbook

Change-Id: I3b1b78127d7d4080a23c0ac9f7d37706197de62c